--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -114,7 +114,7 @@ section {
     font-size: 16px;
   }
   main {
-    padding-bottom: 80px;
+    padding-bottom: 120px;
   }
   section {
     padding: 60px 0;
